fix(transactions): mobile summary text-align

--- a/client/src/components/transaction-history/transaction-history.css
+++ b/client/src/components/transaction-history/transaction-history.css
@@ -97,6 +97,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .transaction-summary .profit {
